# new-bodega-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_MIGRATION_GUIDE.md  DEPLOYMENT_PLAN.md  Dockerfile  IMPLEMENTED_ENDPOINTS.md  RATE_LIMITING_ISSUE.md  README.md  REDIS_SETUP.md  SCHEMA_ALIGNMENT_SUMMARY.md  alembic.ini  docker-compose.yml  env.example  logs.1754563654730.json  main.py  main_supabase.py  package-lock.json  pyproject.toml  requirements.txt  supabase_schema.json  supabase_schema_8.06.25.json  supabase_schema_8.08.25.json  supabase_types.json.js  test_env.py  test_supabase.py
.specstory/history/: 2025-10-28_08-53Z-start-with-schema-alignment-and-endpoints.md  2025-11-10_23-30Z-module-import-error-in-python-project.md
.windsurf/rules/: schema.md
alembic/: env.py
alembic/versions/: 22b4441692fa_initial_migration_with_league_and_.py  __init__.py
app/: __init__.py
app/core/: __init__.py  auth.py  auth_supabase.py  config.py  database.py  exceptions.py  logging.py  rate_limiter.py  structured_logging.py  supabase.py
app/models/: __init__.py  awardRace.py  badge.py  draft_pool.py  event.py  league.py  leagueTeam.py  match.py  matchSubmission.py  match_mvp.py  match_stats.py  player.py  player_rp_transactions.py  ranking_points.py  team.py  teamPlayer.py  teamRoster.py  teamsPotTracker.py  tournament.py  tournament_group.py  tournament_group_member.py  tournament_result.py  upcomingMatch.py  user.py
app/routers/: __init__.py  achievements.py  admin.py  admin_actions.py  admin_matches.py  auth.py  awards.py  awards_race.py  discord.py  events.py  events_refactored.py  events_supabase.py  events_supabase_refactored.py  leaderboard.py  leaderboard_supabase.py  leagues.py  legacy_events.py  legacy_leaderboard.py  legacy_players.py  (+16 more)
docs/: API_UPDATES_2025-10-28.md  AUTHENTICATION.md  DEPLOYMENT_PLAN.md  ENDPOINT_REVIEW.md  ENDPOINT_UPDATES_SUMMARY.md  IMPLEMENTED_ENDPOINTS.md  NEW_ENDPOINTS_QUICK_REFERENCE.md  SCHEMA_ALIGNMENT_REPORT.md  SCHEMA_ALIGNMENT_SUMMARY.md
migrations/: 20250201000000_rename_event_to_tournament.sql  20250803003016_20250802203000.sql
scripts/: apply_migration.py  check_auth.py  check_enum_values.py  check_event_tiers.py  check_rls_direct.py  check_rls_js.py  check_rls_policies.py  check_rls_simple.py  check_stage_enum.py  check_table_structure.py  dev-setup.sh  explore_schema.py  inspect_schema.py  inspect_schema_direct.py  list_supabase_tables.py  setup_redis_local.sh  test_events_crud.py  test_matches_crud.py  test_matches_endpoints.py  test_player_stats_crud.py  test_player_stats_endpoints.py  test_players_crud.py  test_players_crud_actual.py  test_redis.py  test_supabase_crud.py  test_supabase_endpoints.py  test_supabase_endpoints_enhanced.py  test_teams_crud.py  test_teams_endpoints.py  update-schema.py
supabase/: config.toml  new_schema_types.ts
tests/: conftest.py  test_badges.py  test_events.py  test_events_endpoints.py  test_matches.py  test_player_stats.py  test_player_validation.py  test_players.py  test_players_endpoints.py  test_players_router.py  test_teams.py  test_teams_endpoints.py
(+25 files in other folders)
